--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,59 @@
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-<h1>Hello.</h1>
+	<header class="header">
+		<div class="logo-wrapper">
+			<a class="logo" href="/"><img class="img-logo" src="/images/huge-white.png" alt="HUGE"></a>
+			<a class="menu" href="#">
+				<img src="/images/toggle-open.svg" alt="menu">
+				<img src="/images/toggle-close.svg" alt="x">
+			</a>
+		</div>
+
+		<nav class="navigation">
+			<div class="nav-list-wrapper">
+				<ul class="navigation-list">
+					<li>
+						<a href="" class="nav-item">Teste</a>
+					</li>
+					<li class="first-level-nav">
+						<a href="" class="nav-item">Teste</a>
+						<ul class="second-nav-list">
+							<li>
+								<a href="" class="sec-nav-item">Teste-sec</a>
+							</li>
+							<li>
+								<a href="" class="sec-nav-item">Teste-sec</a>
+							</li>
+							<li>
+								<a href="" class="sec-nav-item">Teste-sec</a>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="" class="nav-item">Teste</a>
+					</li>
+					<li>
+						<a href="" class="nav-item">Teste</a>
+					</li>
+				</ul>
+
+				<p class="copyright">© 2014 Huge. All Rights Reserved.</p>	
+			</div>
+		</nav>
+	</header>
+
+	<section class="section">
+		<div class="main-title-wrapper">
+			<div class="img-title-wrapper"></div>
+			<div class="content-wrapper">
+				<h1 class="main-title">Get paid for giving a shit.</h1>
+			</div>
+		</div>
+
+		<div class="content-wrapper">
+			<p class="main-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</section>
 </body>
 </html>
