--- a/public/index.html
+++ b/public/index.html
@@ -59,5 +59,28 @@
 			<p class="main-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 	</section>
+
+	<script>
+		var request = new XMLHttpRequest();
+		request.open('GET', '/api/nav.json', true);
+
+		request.onload = function() {
+		  if (this.status >= 200 && this.status < 400) {
+		    // Success!
+		    var data = JSON.parse(this.response);
+
+		    console.log(data);
+		  } else {
+		    // We reached our target server, but it returned an error
+
+		  }
+		};
+
+		request.onerror = function() {
+		  // There was a connection error of some sort
+		};
+
+		request.send();
+	</script>
 </body>
 </html>
