--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 		<nav class="navigation">
 			<div class="nav-list-wrapper">
-				<ul class="navigation-list">
+				<ul id="navigation-list" class="navigation-list">
 					<li>
 						<a href="" class="nav-item">Teste</a>
 					</li>
